apache.demo-ingress-final.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-demo-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - apache.demo.158.160.206.202.nip.io
    secretName: apache-demo-tls-secret
  rules:
  - host: apache.demo.158.160.206.202.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache
            port:
              number: 80
